--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2016-11-08 16:26+0200\n"
+"PO-Revision-Date: 2016-11-09 09:02+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -35,7 +35,7 @@ msgstr "Add new class from here"
 
 #: components\group/groupPage.html:13
 msgid "Add library"
-msgstr ""
+msgstr "New library"
 
 #: translations/help.html:44
 msgid "Add library description"
@@ -51,7 +51,7 @@ msgstr ""
 
 #: components\group/groupPage.html:14
 msgid "Add profile"
-msgstr ""
+msgstr "New profile"
 
 #: translations/help.html:43
 msgid "Add profile description"
@@ -93,7 +93,8 @@ msgstr ""
 #: translations/help.html:42
 msgid "Add reference to namespace description"
 msgstr ""
-"Imported namespaces can be used to link resources to other recommendations"
+"Imported namespaces can be used to link Classes and Properties to other "
+"standards"
 
 #: translations/misc.html:199
 msgid "Add vocabulary"
@@ -442,7 +443,7 @@ msgstr ""
 
 #: translations/help.html:81
 msgid "Class is here info"
-msgstr ""
+msgstr "Information about the selected Class is seen in here"
 
 #: translations/titles.html:18
 msgid "Class label"
@@ -599,7 +600,7 @@ msgstr ""
 
 #: translations/help.html:8
 msgid "Confirm selection info"
-msgstr ""
+msgstr "Selected operation can be confirmed from here"
 
 #: translations/help.html:30
 msgid "Congratulations for completing adding an association!"
@@ -1199,19 +1200,28 @@ msgstr ""
 
 #: translations/help.html:10
 msgid "Guide through creating new library"
-msgstr ""
+msgstr "Guide through creating new Core Component library"
 
 #: translations/help.html:11
 msgid "Guide through creating new library description"
 msgstr ""
+"Core Component libraries are Linked Data models defining reusable Classes, "
+"Datatype properties and Object properties. Core Components are created based "
+"on well defined Concepts described in terminological dictonaries. Core "
+"component can be linked to existing standards using IRI-identifiers."
 
 #: translations/help.html:12
 msgid "Guide through creating new profile"
-msgstr ""
+msgstr "Guide trough creating new Application Profile"
 
 #: translations/help.html:13
 msgid "Guide through creating new profile description"
 msgstr ""
+"Application Profiles are machine readable information models that document "
+"the information structures using Core Components and other Linked Data based "
+"data models. Application Profiles can be used to document the information "
+"sturctures, link application specific datamodels to international standards, "
+"as a base for physical data model in any syntax"
 
 #: translations/help.html:14
 msgid "Guide through requiring a namespace"
@@ -1514,7 +1524,7 @@ msgstr ""
 
 #: translations/help.html:38
 msgid "Modify library description"
-msgstr ""
+msgstr "You can modify Core Component library from here"
 
 #: translations/help.html:36
 msgid "Modify profile"
@@ -1522,7 +1532,7 @@ msgstr ""
 
 #: translations/help.html:39
 msgid "Modify profile description"
-msgstr ""
+msgstr "You can modify Application Profile from here"
 
 #: components\form/errorMessages.html:20
 msgid "Must be imported namespace"
@@ -1677,6 +1687,10 @@ msgstr ""
 #: translations/help.html:32
 msgid "Open library details description"
 msgstr ""
+"Information about Core Component library can be found from here. This panel "
+"contains information about the used namespaces, terminologies, reference "
+"data and generic documentation about the model. You can also export the data "
+"model in different formats from this panel."
 
 #: translations/help.html:33
 msgid "Open profile details"
@@ -1685,6 +1699,10 @@ msgstr ""
 #: translations/help.html:34
 msgid "Open profile details description"
 msgstr ""
+"Information about Application Profile can be found from here. This panel "
+"contains information about the used namespaces, terminologies, reference "
+"data, history of the data model. You can also export the data model in "
+"different formats from this panel."
 
 #: components\editor/propertyView.html:62
 msgid "Optional metadata"
@@ -1802,11 +1820,14 @@ msgstr ""
 
 #: translations/help.html:87
 msgid "Property is here"
-msgstr ""
+msgstr "Use of Property is defined here"
 
 #: translations/help.html:88
 msgid "Property is here info"
 msgstr ""
+"Information about the property usage consists of Class specific name of the "
+"property, Description of the property usage and specific information of "
+"property is used in the context of the Class."
 
 #: translations/titles.html:22
 msgid "Property label"
@@ -1975,38 +1996,40 @@ msgstr ""
 #: translations/help.html:61
 msgid "Search for jhs info"
 msgstr ""
+"In this tutorial we are going to use Finnish Public Sector Core Component "
+"library"
 
 #: translations/help.html:49
 msgid "Search for nimi"
-msgstr ""
+msgstr "Search for name"
 
 #: translations/help.html:64
 msgid "Search for nimi info"
-msgstr ""
+msgstr "Lets add name Property to the Class"
 
 #: translations/help.html:47
 msgid "Search for palvelu"
-msgstr ""
+msgstr "Search for service"
 
 #: translations/help.html:62
 msgid "Search for palvelu info"
-msgstr ""
+msgstr "Lets search for a class about a service"
 
 #: translations/help.html:48
 msgid "Search for tuote"
-msgstr ""
+msgstr "Search for Product"
 
 #: translations/help.html:63
 msgid "Search for tuote info"
-msgstr ""
+msgstr "Lets add new Class about some Product"
 
 #: translations/help.html:50
 msgid "Search for tuotetaan"
-msgstr ""
+msgstr "Search for produces"
 
 #: translations/help.html:65
 msgid "Search for tuotetaan info"
-msgstr ""
+msgstr "Lets add new association to Product class"
 
 #: translations/misc.html:91
 msgid "Search from concept database"
@@ -2058,7 +2081,7 @@ msgstr ""
 
 #: translations/help.html:74
 msgid "Select association target info"
-msgstr ""
+msgstr "You can create new association from here"
 
 #: translations/misc.html:96
 msgid "Select attribute"
@@ -2074,11 +2097,13 @@ msgstr ""
 
 #: translations/help.html:58
 msgid "Select concept suggest creation"
-msgstr ""
+msgstr "Create new concept suggestion"
 
 #: translations/help.html:73
 msgid "Select concept suggest creation info"
 msgstr ""
+"If some concept is not defined in the used terminologies, you can create new "
+"concept suggestion that is sent to the terminology managers"
 
 #: translations/help.html:7
 msgid "Select group"
@@ -2094,7 +2119,7 @@ msgstr ""
 
 #: translations/help.html:66
 msgid "Select jhs info"
-msgstr ""
+msgstr "Select Namespace from the list"
 
 #: translations/help.html:55
 msgid "Select name and description"
@@ -2102,7 +2127,7 @@ msgstr ""
 
 #: translations/help.html:70
 msgid "Select name and description info"
-msgstr ""
+msgstr "Select name and description"
 
 #: translations/help.html:57
 msgid "Select new association creation"
@@ -2110,31 +2135,31 @@ msgstr ""
 
 #: translations/help.html:72
 msgid "Select new association creation info"
-msgstr ""
+msgstr "New association can be created from here"
 
 #: translations/help.html:56
 msgid "Select new creation"
-msgstr ""
+msgstr "Select Create new class"
 
 #: translations/help.html:71
 msgid "Select new creation info"
-msgstr ""
+msgstr "If some Class is not found, it can be created from here"
 
 #: translations/help.html:53
 msgid "Select nimi"
-msgstr ""
+msgstr "Select name"
 
 #: translations/help.html:68
 msgid "Select nimi info"
-msgstr ""
+msgstr "Name was found from the library and can be selected from the list"
 
 #: translations/help.html:52
 msgid "Select palvelu"
-msgstr ""
+msgstr "Select Public Service"
 
 #: translations/help.html:67
 msgid "Select palvelu info"
-msgstr ""
+msgstr "Select search results from the list"
 
 #: translations/help.html:104
 msgid "Select the vocabulary that is missing the required concept"
@@ -2142,11 +2167,11 @@ msgstr ""
 
 #: translations/help.html:54
 msgid "Select tuote"
-msgstr ""
+msgstr "Select Product"
 
 #: translations/help.html:69
 msgid "Select tuote info"
-msgstr ""
+msgstr "Lets add new Product class"
 
 #: translations/misc.html:180
 msgid "Self reference not allowed"
@@ -2302,7 +2327,7 @@ msgstr ""
 
 #: translations/help.html:99
 msgid "tapahtumaketju joka toteuttaa jotain"
-msgstr ""
+msgstr "event that produces something"
 
 #: translations/misc.html:195
 msgid "Technical namespaces"
@@ -2422,31 +2447,31 @@ msgstr ""
 
 #: translations/misc.html:197
 msgid "Vocabularies"
-msgstr ""
+msgstr "Terminologies"
 
 #: components\model/conceptEditorModal.html:26 translations/titles.html:53
 msgid "Vocabulary"
-msgstr ""
+msgstr "Terminology"
 
 #: components\editor/searchConceptModal.html:20
 msgid "Vocabulary filter"
-msgstr ""
+msgstr "Terminology filter"
 
 #: translations/titles.html:12
 msgid "Vocabulary id"
-msgstr ""
+msgstr "Terminology id"
 
 #: translations/titles.html:12
 msgid "Vocabulary id info"
-msgstr "Identifier of the vocabulary"
+msgstr "Identifier of the terminology"
 
 #: translations/titles.html:53
 msgid "Vocabulary info"
-msgstr ""
+msgstr "Terminology info"
 
 #: translations/misc.html:201
 msgid "Vocabulary name"
-msgstr ""
+msgstr "Terminology name"
 
 #: translations/misc.html:75
 msgid "What can I do content"
